fix nav on mobile

--- a/styles2css.css
+++ b/styles2css.css
@@ -135,7 +135,7 @@ ul#myMenu {
   overflow: hidden;
   text-align: center;
   position: fixed;
-  height: 40vh;
+  height: 45vh;
   top: 30vh;
   right: 4vw;
   /*max-width: 3em;*/
